# neonstudy

./: CMakeLists.txt  LICENSE  README.md  build.sh
basic/: func.h  transpose4x4.cpp  transpose4x4.h  winograd_2x2_3x3.h  winograd_8x8_3x3.h
basic/winograd/: CMakeLists.txt  build.sh
basic/winograd/inc/: func.h  macro.h
basic/winograd/src/: cvtColor.cpp  winograd_2x2_3x3.cpp  winograd_2x2_3x3.h
basic/winograd/test/: test_2x2_3x3.cpp
tests/: CMakeLists.txt
tests/src/: winograd_test.cpp
